--- a/weblamoon/src/pages/Courses/List/style.css
+++ b/weblamoon/src/pages/Courses/List/style.css
@@ -67,3 +67,9 @@ body {
   cursor: pointer;
   text-align: center;
 }
+
+.centralize-text {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
